force-app/main/default/objects/Event_Expense_Opp__c/Event_Expense_Opp__c.object-meta.xml
<CustomObject>
    <label>Opportunity Expense Request</label>
    <nameField>
        <displayFormat>EE Opp-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Expense Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>