force-app/main/default/objects/Event_Expense_Opp__c/fields/HL_Event_Expense__c.field-meta.xml
<CustomField>
    <fullName>HL_Event_Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Request</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Event_Expense__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Expense__c</referenceTo>
    <relationshipLabel>Opportunity Expense Request</relationshipLabel>
    <relationshipName>Event_Expense_Opp</relationshipName>
    <type>Lookup</type>
</CustomField>