force-app/main/default/objects/Event_Expense_Opp__c/fields/HL_Event_Expense_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>HL_Event_Expense_Event_Type__c</fullName>
    <formula>TEXT( HL_Event_Expense__r.Event_Type_Format__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HL_Expense Request: Event Type</label>
    <type>Text</type>
</CustomField>