force-app/main/default/objects/Event_Expense_Opp__c/fields/HL_Event_Expense_Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>HL_Event_Expense_Requestor_Name__c</fullName>
    <formula>HL_Event_Expense__r.Requestor_Name__r.FirstName  &amp; &apos; &apos; &amp;  HL_Event_Expense__r.Requestor_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HL_Expense Request: Requestor Name</label>
    <type>Text</type>
</CustomField>