force-app/main/default/objects/Event_Expense_Opp__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Opportunity Expense Request</relationshipLabel>
    <relationshipName>Event_Expense_Opp</relationshipName>
    <type>Lookup</type>
</CustomField>