force-app/main/default/objects/Event_Expense_Opp__c/validationRules/Opportunity_can_not_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_can_not_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Opportunity__c )</errorConditionFormula>
    <errorMessage>Opportunity can not be changed.</errorMessage>
</ValidationRule>